[package]
name = "token-ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["net", "rt"] }
byteorder = "1.4.3"
rand = "0.8.5"
pretty_env_logger = "0.4.0"
log = "0.4.17"
crossbeam-channel = "0.5.8"
ed25519-dalek = "1.0.1"